<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.navadon.androidnamecard.MainMarkViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainMark">

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="@dimen/width_card"
            android:layout_height="@dimen/height_card"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/recempty1">

            <TextView
                android:id="@+id/stdntCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_top1"
                android:text="@string/StdntCard"
                android:textColor="@color/Title_color"
                android:textSize="@dimen/text_size1" />

            <ImageView
                android:id="@+id/imgBilly"
                android:layout_width="@dimen/width_card"
                android:layout_height="@dimen/height_pic"
                android:layout_marginTop="@dimen/margin_top4"
                android:layout_marginBottom="@dimen/margin_top1"
                android:layout_centerHorizontal="true"
                app:srcCompat="@mipmap/picmark" />


            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/imgBilly"
                android:text="@string/Name"
                android:textColor="@color/Text_color"
                android:textSize="@dimen/text_size2" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/Name"
                android:layout_marginBottom="@dimen/margin_top1"
                android:text="@string/FullName1"
                android:textSize="@dimen/text_size2" />

            <TextView
                android:id="@+id/Student_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/txtName"
                android:text="@string/StudentID"
                android:textColor="@color/Text_color"
                android:textSize="@dimen/text_size2" />

            <TextView
                android:id="@+id/txtStudent_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/Student_ID"
                android:layout_marginBottom="@dimen/margin_top1"
                android:text="@string/StudentID1"
                android:textSize="@dimen/text_size2" />

            <TextView
                android:id="@+id/ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/txtStudent_ID"
                android:text="@string/ID"
                android:textColor="@color/Text_color"
                android:textSize="@dimen/text_size2" />

            <TextView
                android:id="@+id/txtID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/ID"
                android:layout_marginBottom="@dimen/margin_top1"
                android:text="@string/FullID1"
                android:textSize="@dimen/text_size2" />

            <TextView
                android:id="@+id/Faculty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/txtID"
                android:text="@string/Faculty"
                android:textColor="@color/Text_color"
                android:textSize="@dimen/text_size2" />

            <TextView
                android:id="@+id/txtFaculty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/Faculty"
                android:layout_marginBottom="@dimen/margin_top1"
                android:text="@string/FullFaculty"
                android:textSize="@dimen/text_size2" />


        </RelativeLayout>

        <Button
            android:id="@+id/btn_next0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:layout_centerHorizontal="true"
            android:text="@string/next"
            android:onClick="click"/>
    </RelativeLayout>
</layout>


